# enginering-mobile-food-facility-permit

./: .gitignore  README.md
FoodTrucksFinderCLI/: .goreleaser.yaml  main.go
FoodTrucksFinderCLIGolang/: README.md  go.mod  go.sum  run.sh
FoodTrucksFinderCLIRust/: Cargo.toml  README.md  usa_sf_food_trucks_data.csv
FoodTrucksFinderCLIRust/.run/: Run cli.run.xml
FoodTrucksFinderCLIRust/src/: foodTruck.rs  main.rs  main_test.rs
FoodTrucksFinderCLIRust/src/entity/: food_truck.rs  food_truck_test.rs  mod.rs
backend/: docker-compose.yml  pom.xml
backend/src/main/java/com/food/trucks/config/: CORSFilter.java
backend/src/main/java/com/food/trucks/entitiy/: FoodTruckEntity.java
backend/src/main/resources/: application.yaml
backend/src/test/java/com/food/trucks/: SpringbootRedissonApplicationTests.java
backend_java/: .dockerignore  .env  .gitignore  DockerfileBellSoftGraal  DockerfileBellSoftGraalVM  DockerfileBuildNative  DockerfileDebian  DockerfilePythonBase  DockerfileUbuntuBase  README.md  docker-compose.yml  pom.xml  todo.md
backend_java/.github/workflows/: frontend_spa.yml  golang_cli.yml  java.yml  rust_cli.yml
backend_java/src/main/java/com/food/trucks/: FoodTrucksFindApplication.java
backend_java/src/main/resources/: application.yaml
frontend/: index.html  tsconfig.json
frontend/src/: main.css  main.tsx  myMap.tsx  trucks.tsx
frontend_node_react/: package.json  rspack.config.js  tailwind.config.js  vite.config.ts
frontend_node_react/src/: App.tsx  enitity.ts
frontend_node_react/src/api/: api.ts  axios.ts
(+13 files in other folders)
