[package]
name = "cli"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0"
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3.0"
matches = { version = "0.1.10", features = [] }

